Improve portals, styling
